...
        }
    }
    Column(
        verticalArrangement = Arrangement.Center,
        horizontalAlignment = Alignment.CenterHorizontally,
        modifier = Modifier.fillMaxWidth().fillMaxHeight()
            .testTag("scanning_screen")
    ) {
        if (!started && !canceled) {
            try {

                started = true

...
