...
                declineButtonText = stringResource(Res.string.close)
            )
        }

        Column(
            modifier = Modifier.fillMaxWidth().fillMaxHeight().padding(15.dp, 50.dp, 15.dp, 50.dp)
                .testTag("result_screen"),
            verticalArrangement = Arrangement.Center,
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            Row {
                AnimatedPopup(
                    expanded = expandedStat,
...
